tests/NormalTests/paczka1/small_fuzzy/38465984.err
Error in line 1: GvSe S991 83,2
Error in line 7: OEGoWoNrhi A449 64,8
